--- a/bmiCalculator.html
+++ b/bmiCalculator.html
@@ -11,6 +11,9 @@
         #div  {color: brown; border: 2px; position: relative;top:150px;left:450px;
            box-sizing: content-box; border-color: black;  text-decoration: solid; border-style: groove;
             box-shadow: 2px; border-radius: 10px; display: inline-block; padding: 20px; }
+        /* button[type="button"]{ text-decoration: solid; color: green; box-shadow: 10px;} */
+        p{ text-transform: capitalize; box-sizing: content-box; border: 2px; display:block; }
+
 
 
 
@@ -22,6 +25,8 @@
    <h2>Discount Calculator </h2>  
    <P>Enter billl amount </P>
    <p> bill amount</p>
+   <input type="number" name="amount" id="amount">
+
    <p>Discount Percentage </p>
 
    <input type="number" name="amount" id="amount">
